# unwrapper

./: CMakeLists.txt  LICENSE.md  README.md  build_unwrapper.sh  example_unwrapped_file.txt  this_is_an_example_wrapped_file.txt
.github/workflows/: build.yml  release.yml
Unwrapper/: ApplicationLog.hpp  BytesBuffer.hpp  CloakedDagger.cpp  CloakedDagger.hpp  StreamingFileInfo.hpp  Unwrapper.cpp  Unwrapper.hpp  UnwrapperMain.cpp  WrapperInterface.cpp  WrapperInterface.hpp
